data/derived/sp14/progs/unify/prog1722.ml.out
Characters 150-157:
  (Printf.printf ("hi %d" carry))
                  ^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
